Fri Jun 22 08:02:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/TopicImpl.h:
        * dds/DCPS/TopicImpl.cpp:
          Removed fast_listener_, not used anymore

Fri Jun 22 07:49:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/DCPS_Utils.h:
          Doxygen improvements

        * dds/DCPS/DataWriterImpl.cpp:
          Initialise pointer with 0, const improvements

Fri Jun 22 07:26:09 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/GroupRakeData.cpp:
          Use this-> to make clear it is a member we are using

        * dds/DCPS/InstanceState.h:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/WriteDataContainer.h:
          Doxygen fixes

        * dds/DCPS/InstanceState.inl:
          Use prefix increment, improves performance

        * dds/DCPS/SubscriptionInstance.h:
          No need to check a pointer for 0 before calling delete on it

Thu Jun 21 19:01:10 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/BitPubListenerImpl.cpp:
          Added missing return, const changes, make exclude scoped block larger

        * dds/DCPS/DomainParticipantImpl.cpp:
          Initialize pointer to 0 and use _nil for object ptr

        * dds/DCPS/Serializer.h:
          Doxygen fixes

Thu Jun 21 17:57:25 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
        * tests/DCPS/Rejects/publisher.cpp:

          Whitespace changes to fix fuzz warnings.

Thu Jun 21 17:30:26 UTC 2012  Byron Harris  <harrisb@ociweb.com>
